# rnrdp

./: .env  .gitignore  README.md  entrypoint.sh  install-ms2.sh  install-ms3.sh  pyproject.toml  requirements-ms2.txt  requirements-ms2.txt.in  requirements-ms3.txt  requirements-ms3.txt.in  run_docker.sh
rnrdp/: bc_dp_rgbd_ms2.py  bc_dp_rgbd_ms3.py  bc_dp_state_ms2.py  bc_dp_state_ms3.py  bc_rnrdp_rgbd_ms2.py  bc_rnrdp_rgbd_ms3.py  bc_rnrdp_state_ms2.py  bc_rnrdp_state_ms3.py  reference_table.py
rnrdp/nets/dp/: conditional_unet1d.py
rnrdp/nets/rnrdp/: conditional_unet1d.py
rnrdp/utils/: common.py  ms2_data.py  ms3_data.py  profiling.py  sampler.py  torch_utils.py
scripts/: process_ms2_data.sh  process_ms3_data.sh
scripts/docker/: train_rnrdp_state_ms3_rollball.sh
scripts/download/: download_ms2_data.sh  download_ms3_data.sh
scripts/train/: dp_rgbd_ms2.sh  dp_rgbd_ms3.sh  dp_state_ms2.sh  dp_state_ms3.sh  rnrdp_rgbd_ms2.sh  rnrdp_rgbd_ms3.sh  rnrdp_state_ms2.sh  rnrdp_state_ms3.sh
